<?xml version="1.0"?>
<package format="2">
  <name>tb_logger</name>
  <version>0.0.0</version>
  <description>The logger for the TarBEX project</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="vonblanckenburg@tu-berlin.de">Jasper v. Blanckenburg</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="vonblanckenburg@tu-berlin.de">Jasper v. Blanckenburg</author>

  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_export_depend>octomap_msgs</build_export_depend>
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>octomap_ros</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
